Fixed buttons when container is too narrow.

--- a/sass/partials/global/styles/_button.scss
+++ b/sass/partials/global/styles/_button.scss
@@ -39,6 +39,7 @@ $button-font-size: $font-size-md !default;
   text-align: center;
   text-decoration: none;
   vertical-align: baseline;
+  white-space: normal;
 
   &:focus,
   &:hover {
